{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 54,
  "lineage": "619e7dff-1027-f903-4464-6279a65c0972",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "monitor_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:ec2:us-east-1:238841125793:instance/i-0237bbb058b03e80b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0237bbb058b03e80b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03c4823e3f02544ba"
              }
            ],
            "primary_network_interface_id": "eni-03c4823e3f02544ba",
            "private_dns": "ip-10-0-1-140.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.140",
            "public_dns": "ec2-100-54-37-212.compute-1.amazonaws.com",
            "public_ip": "100.54.37.212",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09223d2980e4a275f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d45a09b8a57601f3",
            "tags": {
              "Environment": "v2-automation",
              "Name": "Cloud-Security-Monitoring-node"
            },
            "tags_all": {
              "Environment": "v2-automation",
              "Name": "Cloud-Security-Monitoring-node",
              "Project": "Cloud-Security-Monitoring"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d057b5f5cbe7a290"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238841125793",
            "id": "i-0237bbb058b03e80b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238841125793:internet-gateway/igw-097b5fb5c9ec05173",
            "id": "igw-097b5fb5c9ec05173",
            "owner_id": "238841125793",
            "region": "us-east-1",
            "tags": {
              "Environment": "v2-automation",
              "Name": "Cloud-Security-Monitoring-igw"
            },
            "tags_all": {
              "Environment": "v2-automation",
              "Name": "Cloud-Security-Monitoring-igw",
              "Project": "Cloud-Security-Monitoring"
            },
            "vpc_id": "vpc-07cf714d5e2ec6f8b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238841125793",
            "id": "igw-097b5fb5c9ec05173",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238841125793:route-table/rtb-0a8ca3fea4b6a3796",
            "id": "rtb-0a8ca3fea4b6a3796",
            "owner_id": "238841125793",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-097b5fb5c9ec05173",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "v2-automation",
              "Name": "Cloud-Security-Monitoring-public-rt"
            },
            "tags_all": {
              "Environment": "v2-automation",
              "Name": "Cloud-Security-Monitoring-public-rt",
              "Project": "Cloud-Security-Monitoring"
            },
            "timeouts": null,
            "vpc_id": "vpc-07cf714d5e2ec6f8b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238841125793",
            "id": "rtb-0a8ca3fea4b6a3796",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edee84a1fc01783a",
            "region": "us-east-1",
            "route_table_id": "rtb-0a8ca3fea4b6a3796",
            "subnet_id": "subnet-0d45a09b8a57601f3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238841125793",
            "id": "rtbassoc-0edee84a1fc01783a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238841125793:security-group/sg-0d057b5f5cbe7a290",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d057b5f5cbe7a290",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Cloud-Security-Monitoring-sg",
            "name_prefix": "",
            "owner_id": "238841125793",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Cloud-Security-Monitoring-sg"
            },
            "tags_all": {
              "Environment": "v2-automation",
              "Name": "Cloud-Security-Monitoring-sg",
              "Project": "Cloud-Security-Monitoring"
            },
            "timeouts": null,
            "vpc_id": "vpc-07cf714d5e2ec6f8b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238841125793",
            "id": "sg-0d057b5f5cbe7a290",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238841125793:subnet/subnet-0d45a09b8a57601f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d45a09b8a57601f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "238841125793",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "v2-automation",
              "Name": "Cloud-Security-Monitoring-public-subnet"
            },
            "tags_all": {
              "Environment": "v2-automation",
              "Name": "Cloud-Security-Monitoring-public-subnet",
              "Project": "Cloud-Security-Monitoring"
            },
            "vpc_id": "vpc-07cf714d5e2ec6f8b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238841125793",
            "id": "subnet-0d45a09b8a57601f3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:238841125793:vpc/vpc-07cf714d5e2ec6f8b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0572dc3dbbc87a23e",
            "default_route_table_id": "rtb-0796948089aece03a",
            "default_security_group_id": "sg-0c118c8875be6e075",
            "dhcp_options_id": "dopt-013edf6404dc69e4e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07cf714d5e2ec6f8b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0796948089aece03a",
            "owner_id": "238841125793",
            "region": "us-east-1",
            "tags": {
              "Environment": "v2-automation",
              "Name": "Cloud-Security-Monitoring-vpc"
            },
            "tags_all": {
              "Environment": "v2-automation",
              "Name": "Cloud-Security-Monitoring-vpc",
              "Project": "Cloud-Security-Monitoring"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "238841125793",
            "id": "vpc-07cf714d5e2ec6f8b",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}